# newsletter-ai

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  PROJECT_COMPLETION.md  QUICK_DEPLOY.md  README.md  SETUP.md  build.sh  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  run.py  streamlit_app.py  test_setup.py  test_slack.py
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: agent_integration.py  auth.py  email.py  newsletters.py  preferences.py  users.py
app/core/: auth_deps.py  config.py  database.py
app/migrations/: __init__.py  add_mindmap_columns.py  add_mindmap_enhancements.py  create_tables.py  db_manager.py  seed_data.py  test_models.py
app/models/: __init__.py  newsletter.py  newsletter_history.py  preferences.py  rating.py  user.py
app/portia/: __init__.py  agent_orchestrator.py  base_agent.py  config.py  custom_prompt_agent.py  mindmap_agent.py  preference_agent.py  research_agent.py  writing_agent.py
app/schemas/: newsletter.py  preferences.py  rating.py  user.py
app/services/: email.py  email_templates.py  embeddings.py  memory.py  monitoring.py  rag_system.py  rating_service.py  scheduler.py  slack.py  tavily.py  upstash.py
app/utils/: __init__.py  db_utils.py
pages/: 1_📊_Dashboard.py  ⚙️_Preferences.py  ✍️_Create_Newsletter.py  📄_Newsletter_Detail.py  📈_Analytics.py  📊_Dashboard.py  🔍_Monitoring.py
