[project]
name = "newsletter-ai"
version = "2.0.0"
description = "Production-ready AI-Powered Newsletter Generation System with Portia AI agents, RAG personalization, and multi-service deployment support"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Newsletter AI Team", email = "team@newsletter-ai.dev" }
]
license = {text = "MIT"}
keywords = ["ai", "newsletter", "portia", "rag", "email", "automation", "streamlit", "fastapi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Framework :: Streamlit",
]

[project.urls]
Homepage = "https://github.com/newsletter-ai/newsletter-ai"
Documentation = "https://github.com/newsletter-ai/newsletter-ai/blob/main/README.md"
Repository = "https://github.com/newsletter-ai/newsletter-ai.git"
"Bug Tracker" = "https://github.com/newsletter-ai/newsletter-ai/issues"
"Deployment Guide" = "https://github.com/newsletter-ai/newsletter-ai/blob/main/DEPLOYMENT.md"
dependencies = [
    # Core Web Framework
    "fastapi>=0.116.0,<0.117.0",
    "uvicorn[standard]>=0.35.0,<0.36.0",
    "starlette>=0.47.0,<0.48.0",
    
    # Frontend Framework
    "streamlit>=1.48.0,<1.49.0",
    "altair>=5.3.0,<5.4.0",
    "plotly==5.24.1",
    "pandas==2.2.3",
    
    # AI Framework & Models (Version-locked for Portia compatibility)
    "portia-sdk-python==0.7.2",
    "google-generativeai>=0.7.0,<0.8.0",
    "openai>=1.98.0,<1.99.0",
    "anthropic==0.55.0",
    
    # Database & ORM
    "sqlalchemy>=2.0.40,<2.1.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    
    # Authentication & Security
    "python-jose[cryptography]>=3.5.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    
    # Data Validation
    "pydantic[email]>=2.11.0,<3.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "email-validator>=2.2.0,<3.0.0",
    
    # External API Services
    "resend>=2.13.0,<3.0.0",
    "tavily-python>=0.7.11,<1.0.0",
    
    # Cloud Storage & Cache
    "upstash-redis>=1.4.0,<2.0.0",
    "upstash-vector>=0.8.0,<1.0.0",
    "redis>=6.4.0,<7.0.0",
    
    # HTTP & Networking
    "httpx>=0.28.0,<0.29.0",
    "requests>=2.32.0,<3.0.0",
    "aiohttp>=3.12.0,<4.0.0",
    
    # Utilities & Environment
    "python-dotenv>=1.1.0,<2.0.0",
    "schedule>=1.2.0,<2.0.0",
    "python-dateutil>=2.9.0,<3.0.0",
    "rich>=14.1.0,<15.0.0",
    "typer>=0.16.0,<1.0.0",
    "loguru>=0.7.0,<1.0.0",
    
    # Template & Rendering
    "jinja2>=3.1.6,<4.0.0",
    "markupsafe>=3.0.2,<4.0.0",
    
    # System Dependencies
    "setuptools>=72.0.0",
    "packaging>=25.0",
    "certifi>=2025.8.0",
    "watchdog==4.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
newsletter-ai = "app.main:app"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["pages*", "logs*", "tests*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true